feat: 为500-1449的题目添加了前置知识标签 (#389)
Co-authored-by: lucifer <azl397985856@gmail.com>

--- a/problems/1011.capacity-to-ship-packages-within-d-days-cn.md
+++ b/problems/1011.capacity-to-ship-packages-within-d-days-cn.md
@@ -47,6 +47,10 @@ https://leetcode-cn.com/problems/capacity-to-ship-packages-within-d-days
 1 <= D <= weights.length <= 50000
 1 <= weights[i] <= 500
 
+## 前置知识
+
+- 二分法
+
 ## 思路
 
 这道题和[猴子吃香蕉](https://github.com/azl397985856/leetcode/blob/master/problems/875.koko-eating-bananas.md) 简直一摸一样，没有看过的建议看一下那道题。
