--- a/problems/1014.best-sightseeing-pair.md
+++ b/problems/1014.best-sightseeing-pair.md
@@ -21,6 +21,10 @@ https://leetcode-cn.com/problems/best-sightseeing-pair/description/
 2 <= A.length <= 50000
 1 <= A[i] <= 1000
 
+## 前置知识
+
+- 动态规划
+
 ## 思路
 
 最简单的思路就是两两组合，找出最大的，妥妥超时，我们来看下代码：
