--- a/problems/1131.maximum-of-absolute-value-expression.md
+++ b/problems/1131.maximum-of-absolute-value-expression.md
@@ -24,6 +24,10 @@ https://leetcode-cn.com/problems/maximum-of-absolute-value-expression/descriptio
 2 <= arr1.length == arr2.length <= 40000
 -10^6 <= arr1[i], arr2[i] <= 10^6
 
+## 前置知识
+
+- 数组
+
 ## 解法一（数学分析）
 
 ### 思路
