--- a/problems/1168.optimize-water-distribution-in-a-village-cn.md
+++ b/problems/1168.optimize-water-distribution-in-a-village-cn.md
@@ -27,6 +27,12 @@ wells.length == n
 0 <= pipes[i][2] <= 10^5
 pipes[i][0] != pipes[i][1]
 ```
+
+## 前置知识
+
+- 图
+- 最小生成树
+
 example 1 pic:
 
 ![example 1](../assets/problems/1168.optimize-water-distribution-in-a-village-example1.png)
