--- a/problems/1227.airplane-seat-assignment-probability.md
+++ b/problems/1227.airplane-seat-assignment-probability.md
@@ -36,6 +36,11 @@ https://leetcode-cn.com/problems/airplane-seat-assignment-probability/descriptio
 
 ```
 
+## 前置知识
+
+- 记忆化搜索
+- 动态规划
+
 ## 暴力递归
 
 这是一道 LeetCode 为数不多的概率题，我们来看下。
