--- a/problems/1262.greatest-sum-divisible-by-three.md
+++ b/problems/1262.greatest-sum-divisible-by-three.md
@@ -33,6 +33,12 @@ https://leetcode-cn.com/problems/greatest-sum-divisible-by-three/description/
 
 ```
 
+## 前置知识
+
+- 数组
+- 回溯法
+- 排序
+
 ## 暴力法
 
 ### 思路
