--- a/problems/1297.maximum-number-of-occurrences-of-a-substring.md
+++ b/problems/1297.maximum-number-of-occurrences-of-a-substring.md
@@ -40,6 +40,11 @@ https://leetcode-cn.com/problems/maximum-number-of-occurrences-of-a-substring
 s 只包含小写英文字母。
 ```
 
+## 前置知识
+
+- 字符串
+- 滑动窗口
+
 ## 暴力法
 
 题目给的数据量不是很大，为 1 <= maxLetters <= 26，我们试一下暴力法。
