--- a/problems/1332.remove-palindromic-subsequences.md
+++ b/problems/1332.remove-palindromic-subsequences.md
@@ -45,6 +45,10 @@ s 仅包含字母 'a'  和 'b'
 在真实的面试中遇到过这道题？
 ```
 
+## 前置知识
+
+- 回文
+
 ## 思路
 
 这又是一道“抖机灵”的题目，类似的题目有[1297.maximum-number-of-occurrences-of-a-substring](https://github.com/azl397985856/leetcode/blob/77db8fa47c7ee0a14b320f7c2d22f7c61ae53c35/problems/1297.maximum-number-of-occurrences-of-a-substring.md)
