--- a/problems/518.coin-change-2.md
+++ b/problems/518.coin-change-2.md
@@ -34,6 +34,11 @@ https://leetcode-cn.com/problems/coin-change-2/description/
 硬币种类不超过 500 种
 结果符合 32 位符号整数
 
+## 前置知识
+
+- 动态规划
+- 背包问题
+
 ## 思路
 
 这个题目和 coin-change 的思路比较类似。
