--- a/problems/575.distribute-candies.md
+++ b/problems/575.distribute-candies.md
@@ -23,6 +23,10 @@ The length of the given array is in range [2, 10,000], and will be even.
 The number in given array is in range [-100,000, 100,000].
 ```
 
+## 前置知识
+
+- 数组
+
 ## 思路
 由于糖果是偶数，并且我们只需要做到两个人糖果数量一样即可。
 
