--- a/problems/721.accounts-merge.md
+++ b/problems/721.accounts-merge.md
@@ -27,6 +27,10 @@ accounts 的长度将在[1，1000]的范围内。
 accounts[i]的长度将在[1，10]的范围内。
 accounts[i][j]的长度将在[1，30]的范围内。
 
+## 前置知识
+
+- 并查集
+
 ## 思路
 
 我们抛开 name 不管。 我们只根据 email 建立并查集即可。这样一个连通分量中的 email 就是一个人，我们在用一个 hashtable 记录 email 和 name 的映射，将其输出即可。
