--- a/problems/874.walking-robot-simulation.md
+++ b/problems/874.walking-robot-simulation.md
@@ -43,6 +43,10 @@ https://leetcode-cn.com/problems/walking-robot-simulation/submissions/
 
 ```
 
+## 前置知识
+
+- 哈希表
+
 ## 思路
 
 这道题之所以是简单难度，是因为其没有什么技巧。你只需要看懂题目描述，然后把题目描述转化为代码即可。
