--- a/problems/1015.smallest-integer-divisible-by-k.md
+++ b/problems/1015.smallest-integer-divisible-by-k.md
@@ -34,6 +34,8 @@ https://leetcode-cn.com/problems/smallest-integer-divisible-by-k/description/
 
 ```
 
+## 前置知识
+
 ## 思路
 
 这道题是说给定一个 K 值，能否找到一个形如 1，11，111，1111 。。。 这样的数字 n 使得 n % K == 0。
