--- a/problems/1019.next-greater-node-in-linked-list.md
+++ b/problems/1019.next-greater-node-in-linked-list.md
@@ -35,6 +35,11 @@ https://leetcode-cn.com/problems/next-greater-node-in-linked-list/submissions/
 给定列表的长度在 [0, 10000] 范围内
 ```
 
+## 前置知识
+
+- 链表
+- 栈
+
 ## 思路
 
 看完题目就应该想到单调栈才行，LeetCode 上关于单调栈的题目还不少，难度都不小。但是一旦你掌握了这个算法，那么这些题目对你来说都不是问题了。
