--- a/problems/1104.path-in-zigzag-labelled-binary-tree.md
+++ b/problems/1104.path-in-zigzag-labelled-binary-tree.md
@@ -27,6 +27,10 @@ https://leetcode-cn.com/problems/path-in-zigzag-labelled-binary-tree/description
 
 1 <= label <= 10^6
 
+## 前置知识
+
+- 二叉树
+
 ## 思路
 
 假如这道题不是之字形，那么就会非常简单。 我们可以根据子节点的 label 轻松地求出父节点的 label，公示是 label // 2（其中 label 为子节点的 label）。
