--- a/problems/516.longest-palindromic-subsequence.md
+++ b/problems/516.longest-palindromic-subsequence.md
@@ -23,6 +23,10 @@ Output:
 One possible longest palindromic subsequence is "bb".
 ```
 
+## 前置知识
+
+- 动态规划
+
 ## 思路
 
 这是一道最长回文的题目，要我们求出给定字符串的最大回文子序列。
