--- a/problems/547.friend-circles.md
+++ b/problems/547.friend-circles.md
@@ -31,6 +31,10 @@ N 在[1,200]的范围内。
 对于所有学生，有 M[i][i] = 1。
 如果有 M[i][j] = 1，则有 M[j][i] = 1。
 
+## 前置知识
+
+- 并查集
+
 ## 思路
 
 并查集有一个功能是可以轻松计算出连通分量，然而本题的朋友圈的个数，本质上就是连通分量的个数，因此用并查集可以完美解决。
