--- a/problems/560.subarray-sum-equals-k.md
+++ b/problems/560.subarray-sum-equals-k.md
@@ -16,6 +16,11 @@ The range of numbers in the array is [-1000, 1000] and the range of the integer 
 
 ```
 
+## 前置知识
+
+- 哈希表
+- 前缀和
+
 ## 思路
 
 符合直觉的做法是暴力求解所有的子数组，然后分别计算和，如果等于 k,count 就+1.这种做法的时间复杂度为 O(n^2)，代码如下：
