feat: $124 add Python Code

--- a/problems/124.binary-tree-maximum-path-sum.md
+++ b/problems/124.binary-tree-maximum-path-sum.md
@@ -78,7 +78,7 @@ Output: 42
 
 ## 代码
 
-代码支持：JavaScript，Java
+代码支持：JavaScript，Java，Python
 
 - JavaScript
 
@@ -153,6 +153,23 @@ class Solution {
   }
 }
 ```
+
+- Python
+
+```py
+
+class Solution:
+    ans = float('-inf')
+    def maxPathSum(self, root: TreeNode) -> int:
+        def helper(node):
+            if not node: return 0
+            l = helper(node.left)
+            r = helper(node.right)
+            self.ans = max(self.ans, max(l,0) + max(r, 0) + node.val)
+            return max(l, r, 0) + node.val
+        helper(root)
+        return self.ans
+ ```
 
 ## 相关题目
 - [113.path-sum-ii](./113.path-sum-ii.md)
