--- a/problems/124.binary-tree-maximum-path-sum.md
+++ b/problems/124.binary-tree-maximum-path-sum.md
@@ -173,3 +173,7 @@ class Solution:
 
 ## 相关题目
 - [113.path-sum-ii](./113.path-sum-ii.md)
+
+## 扩展
+
+实际上这道题，当遍历到某一个节点的时候，我们需要子节点的信息，然后同时结合自身的 val 来决定要不要选取左右子树。 因此这个过程本质上就是`后序遍历`。
