--- a/problems/820.short-encoding-of-words.md
+++ b/problems/820.short-encoding-of-words.md
@@ -92,7 +92,7 @@ class Trie:
             curr = curr[w]
         curr['#'] = 1
 
-    def isTail(self, word):
+    def search(self, word):
         """
         Returns if the word is in the trie.
         :type word: str
@@ -101,6 +101,7 @@ class Trie:
         curr = self.Trie
         for w in word:
             curr = curr[w]
+        # we meet '#'
         return len(curr) == 1
 class Solution:
     def minimumLengthEncoding(self, words: List[str]) -> int:
@@ -110,7 +111,7 @@ class Solution:
         for word in words:
             trie.insert(word[::-1])
         for word in words:
-            if trie.isTail(word[::-1]):
+            if trie.search(word[::-1]):
                 cnt += len(word) + 1
         return cnt
 
