--- a/problems/820.short-encoding-of-words.md
+++ b/problems/820.short-encoding-of-words.md
@@ -101,8 +101,8 @@ class Trie:
         curr = self.Trie
         for w in word:
             curr = curr[w]
-        # we meet '#'
-        return len(curr) == 1
+        # len(curr) == 1 means we meet '#'
+        return len(curr) == 1 
 class Solution:
     def minimumLengthEncoding(self, words: List[str]) -> int:
         trie = Trie()
