--- a/problems/820.short-encoding-of-words.md
+++ b/problems/820.short-encoding-of-words.md
@@ -102,7 +102,9 @@ class Trie:
         for w in word:
             curr = curr[w]
         # len(curr) == 1 means we meet '#'
-        # when we search 'em'(which reversed from 'me'), the result is len(curr) > 1 . cause the curr look like { '#': 1, i {...}} 
+        # when we search 'em'(which reversed from 'me')
+        # the result is len(curr) > 1
+        # cause the curr look like { '#': 1, i {...}} 
         return len(curr) == 1 
 class Solution:
     def minimumLengthEncoding(self, words: List[str]) -> int:
