--- a/problems/131.palindrome-partitioning.md
+++ b/problems/131.palindrome-partitioning.md
@@ -31,6 +31,11 @@ Output:
 这里就不多说了。大家可以结合其他几道题目加深一下理解。
 
 
+这里我画了一个图：
+
+![](https://tva1.sinaimg.cn/large/007S8ZIlly1gfyrnqi82ej31190u0e81.jpg)
+
+
 ## 关键点解析
 
 - 回溯法
