--- a/problems/102.binary-tree-level-order-traversal.md
+++ b/problems/102.binary-tree-level-order-traversal.md
@@ -193,7 +193,7 @@ class Solution:
 
 更多题解可以访问我的LeetCode题解仓库：https://github.com/azl397985856/leetcode  。 目前已经30K star啦。
 
-大家也可以关注我的公众号《脑洞前端》获取更多更新鲜的LeetCode题解
+关注公众号力扣加加，努力用清晰直白的语言还原解题思路，并且有大量图解，手把手教你识别套路，高效刷题。
 
 ## 扩展
 
