--- a/problems/11.container-with-most-water.md
+++ b/problems/11.container-with-most-water.md
@@ -50,9 +50,7 @@ for (let i = 0; i < height.length; i++) {
 return max;
 ```
 
-> 这种符合直觉的解法有点像冒泡排序， 大家可以稍微类比一下
-
-那么有没有更加优的解法呢？我们来换个角度来思考这个问题，上述的解法是通过两两组合，这无疑是完备的，
+可以解法效率不高，但是可以通过。那么有没有更加优的解法呢？我们来换个角度来思考这个问题，上述的解法是通过两两组合，这无疑是完备的，
 那我门是否可以先计算长度为 n 的面积，然后计算长度为 n-1 的面积，... 计算长度为 1 的面积。 这样去不断更新最大值呢？
 很显然这种解法也是完备的，但是似乎时间复杂度还是 O(n ^ 2), 不要着急。
 
@@ -73,7 +71,7 @@ return max;
 
 ## 代码
 
-- 语言支持：JS，C++
+- 语言支持：JS，C++,Python
 
 JavaScript Code:
 
@@ -124,6 +122,22 @@ public:
         return ret;
     }
 };
+```
+
+Python Code:
+
+```py
+class Solution:
+    def maxArea(self, heights):
+        l, r =  0, len(heights) - 1
+        ans = 0
+        while l < r:
+            ans = max(ans, (r - l) * min(heights[l], heights[r]))
+            if heights[r] > heights[l]:
+                l += 1
+            else:
+                r -= 1
+        return ans
 ```
 
 **_复杂度分析_**
