--- a/problems/11.container-with-most-water.md
+++ b/problems/11.container-with-most-water.md
@@ -145,6 +145,7 @@ class Solution:
 - 时间复杂度：$O(N)$
 - 空间复杂度：$O(1)$
 
-大家也可以关注我的公众号《脑洞前端》获取更多更新鲜的 LeetCode 题解
+关注公众号力扣加加，努力用清晰直白的语言还原解题思路，并且有大量图解，手把手教你识别套路，高效刷题。
 
-![](https://pic.leetcode-cn.com/89ef69abbf02a2957838499a96ce3fbb26830aae52e3ab90392e328c2670cddc-file_1581478989502)
+
+![](https://tva1.sinaimg.cn/large/007S8ZIlly1gfcuzagjalj30p00dwabs.jpg)
