--- a/problems/11.container-with-most-water.md
+++ b/problems/11.container-with-most-water.md
@@ -1,28 +1,30 @@
 ## 题目地址
 
-https://leetcode.com/problems/container-with-most-water/description/
+https://leetcode-cn.com/problems/container-with-most-water/description/
 
 ## 题目描述
 
-```
-Given n non-negative integers a1, a2, ..., an , where each represents a point at coordinate (i, ai). n vertical lines are drawn such that the two endpoints of line i is at (i, ai) and (i, 0). Find two lines, which together with x-axis forms a container, such that the container contains the most water.
+给你 n 个非负整数 a1，a2，...，an，每个数代表坐标中的一个点 (i, ai) 。在坐标内画 n 条垂直线，垂直线 i 的两个端点分别为 (i, ai) 和 (i, 0)。找出其中的两条线，使得它们与 x 轴共同构成的容器可以容纳最多的水。
 
-Note: You may not slant the container and n is at least 2.
-```
+说明：你不能倾斜容器，且 n 的值至少为 2。
 
+ 
 ![11.container-with-most-water-question](../assets/problems/11.container-with-most-water-question.jpg)
 
-```
 
-The above vertical lines are represented by array [1,8,6,2,5,4,8,3,7]. In this case, the max area of water (blue section) the container can contain is 49.
+图中垂直线代表输入数组 [1,8,6,2,5,4,8,3,7]。在此情况下，容器能够容纳水（表示为蓝色部分）的最大值为 49。
+
+ 
+
+示例：
+
+输入：[1,8,6,2,5,4,8,3,7]
+输出：49
 
 
 
-Example:
 
-Input: [1,8,6,2,5,4,8,3,7]
-Output: 49
-```
+
 
 ## 前置知识
 
@@ -30,14 +32,12 @@ Output: 49
 
 ## 思路
 
-符合直觉的解法是，我们可以对两两进行求解，计算可以承载的水量。 然后不断更新最大值，最后返回最大值即可。
-这种解法，需要两层循环，时间复杂度是 O(n^2)
+题目中说`找出其中的两条线，使得它们与 x 轴共同构成的容器可以容纳最多的水。` ，因此符合直觉的解法就是固定两个端点，计算可以承载的水量， 然后不断更新最大值，最后返回最大值即可。这种算法，需要两层循环，时间复杂度是 $O(n^2)$。
 
-eg:
+
+代码（JS）:
 
 ```js
-// 这个解法比较暴力，效率比较低
-// 时间复杂度是O(n^2)
 let max = 0;
 for (let i = 0; i < height.length; i++) {
   for (let j = i + 1; j < height.length; j++) {
@@ -50,9 +50,9 @@ for (let i = 0; i < height.length; i++) {
 return max;
 ```
 
-可以解法效率不高，但是可以通过。那么有没有更加优的解法呢？我们来换个角度来思考这个问题，上述的解法是通过两两组合，这无疑是完备的，
-那我门是否可以先计算长度为 n 的面积，然后计算长度为 n-1 的面积，... 计算长度为 1 的面积。 这样去不断更新最大值呢？
-很显然这种解法也是完备的，但是似乎时间复杂度还是 O(n ^ 2), 不要着急。
+可以解法效率不高，但是可以通过（JS可以通过，Python 不可以，其他语言没有尝试）。那么有没有更优的解法呢？
+
+我们来换个角度来思考这个问题，上述的解法是通过两两组合，这无疑是完备的。我们换个角度思考，是否可以先计算长度为 n 的面积，然后计算长度为 n-1 的面积，... 计算长度为 1 的面积。 这样去不断更新最大值呢？很显然这种解法也是完备的，但是似乎时间复杂度还是 $O(n ^ 2)$, 不要着急。
 
 考虑一下，如果我们计算 n-1 长度的面积的时候,是直接直接排除一半的结果的。
 
@@ -61,9 +61,9 @@ return max;
 ![11.container-with-most-water](../assets/problems/11.container-with-most-water.png)
 
 比如我们计算 n 面积的时候，假如左侧的线段高度比右侧的高度低，那么我们通过左移右指针来将长度缩短为 n-1 的做法是没有意义的，
-因为`新的形成的面积变成了(n-1) * heightOfLeft 这个面积一定比刚才的长度为n的面积nn * heightOfLeft 小`
+因为`新的形成的面积变成了(n-1) * heightOfLeft 这个面积一定比刚才的长度为 n 的面积 （n * heightOfLeft） 小`。
 
-也就是说最大面积`一定是当前的面积或者通过移动短的线段得到`。
+也就是说**最大面积一定是当前的面积或者通过移动短的端点得到。**
 
 ## 关键点解析
 
@@ -142,8 +142,8 @@ class Solution:
 
 **_复杂度分析_**
 
-- 时间复杂度：$O(N)$
-- 空间复杂度：$O(1)$
+- 时间复杂度：由于左右指针移动的次数加起来正好是 n， 因此时间复杂度为 $O(N)$。
+- 空间复杂度：$O(1)$。
 
 更多题解可以访问我的LeetCode题解仓库：https://github.com/azl397985856/leetcode  。 目前已经30K star啦。
 
