--- a/problems/11.container-with-most-water.md
+++ b/problems/11.container-with-most-water.md
@@ -50,11 +50,11 @@ for (let i = 0; i < height.length; i++) {
 return max;
 ```
 
-可以解法效率不高，但是可以通过（JS可以通过，Python 不可以，其他语言没有尝试）。那么有没有更优的解法呢？
+虽然解法效率不高，但是可以通过（JS可以通过，Python 不可以，其他语言没有尝试）。那么有没有更优的解法呢？
 
 我们来换个角度来思考这个问题，上述的解法是通过两两组合，这无疑是完备的。我们换个角度思考，是否可以先计算长度为 n 的面积，然后计算长度为 n-1 的面积，... 计算长度为 1 的面积。 这样去不断更新最大值呢？很显然这种解法也是完备的，但是似乎时间复杂度还是 $O(n ^ 2)$, 不要着急。
 
-考虑一下，如果我们计算 n-1 长度的面积的时候,是直接直接排除一半的结果的。
+考虑一下，如果我们计算 n-1 长度的面积的时候,是可以直接排除一半的结果的。
 
 如图：
 
