feat: add python code

--- a/problems/875.koko-eating-bananas.md
+++ b/problems/875.koko-eating-bananas.md
@@ -56,6 +56,33 @@ piles.length <= H <= 10^9
 
 ## 代码
 
+ 代码支持：Python，JavaScript
+ 
+ Python Code:
+ 
+```py
+class Solution:
+    def canEatAllBananas(self, piles, H, K):
+        t = 0
+        for pile in piles:
+            t += math.ceil(pile / K)
+        return t <= H
+    def minEatingSpeed(self, piles: List[int], H: int) -> int:
+        l, r = 1, max(piles)
+        # [l, r) ， 左闭右开的好处是如果能找到，那么返回 l 和 r 都是一样的，因为最终 l 等于 r。 
+        while l < r:
+            mid = (l + r) >> 1
+            if self.canEatAllBananas(piles, H, mid):
+                r = mid
+            else:
+                l = mid + 1
+        return l
+
+```
+ 
+ 
+ JavaScript Code:
+
 ```js
 
 function canEatAllBananas(piles, H, mid) {
@@ -74,7 +101,7 @@ function canEatAllBananas(piles, H, mid) {
 var minEatingSpeed = function(piles, H) {
     let lo = 1,
     hi = Math.max(...piles);
-
+    // [l, r) ， 左闭右开的好处是如果能找到，那么返回 l 和 r 都是一样的，因为最终 l 等于 r。
     while(lo <= hi) {
         let mid = lo + ((hi - lo) >> 1);
         if (canEatAllBananas(piles, H, mid)) {
