--- a/problems/875.koko-eating-bananas.md
+++ b/problems/875.koko-eating-bananas.md
@@ -45,7 +45,9 @@ piles.length <= H <= 10^9
 
 这道题如果能看出来是二分法解决，那么其实很简单。为什么它是二分问题呢？我这里画了个图，我相信你看了就明白了。
 
-![koko-eating-bananas](../assets/problems/koko-eating-bananas.png)
+![](https://tva1.sinaimg.cn/large/007S8ZIlly1gg5yzrbbyqj30q00lvdiy.jpg)
+
+> 香蕉堆的香蕉个数上限是 10^9， 珂珂这也太能吃了吧？
 
 ## 关键点解析
 
@@ -116,6 +118,90 @@ var minEatingSpeed = function(piles, H) {
 **复杂度分析**
 - 时间复杂度：$O(max(N, N * logM))$，其中 N 为 piles 长度， M 为 Piles 中最大的数。
 - 空间复杂度：$O(1)$
+
+## 模板
+
+分享一下，几个的二分法的模板。
+
+
+### 查找一个数
+
+```java
+public int binarySearch(int[] nums, int target) {
+    // 左右都闭合的区间 [l, r]
+    int left = 0; 
+    int right = nums.length - 1;
+
+    while(left <= right) {
+        int mid = left + (right - left) / 2;
+        if(nums[mid] == target)
+            return mid; 
+        else if (nums[mid] < target)
+			// 搜索区间变为 [mid+1, right]
+            left = mid + 1;
+        else if (nums[mid] > target)
+            // 搜索区间变为 [left, mid - 1]
+            right = mid - 1;
+    }
+    return -1;
+}
+```
+
+### 寻找最左边的满足条件的值
+
+```java
+public int binarySearchLeft(int[] nums, int target) {
+	// 搜索区间为 [left, right]
+    int left = 0;
+    int right = nums.length - 1;
+    while (left <= right) {
+        int mid = left + (right - left) / 2;
+        if (nums[mid] < target) {
+            // 搜索区间变为 [mid+1, right]
+            left = mid + 1;
+        } else if (nums[mid] > target) {
+            // 搜索区间变为 [left, mid-1]
+            right = mid - 1;
+        } else if (nums[mid] == target) {
+            // 收缩右边界
+            right = mid - 1;
+        }
+    }
+    // 检查是否越界
+    if (left >= nums.length || nums[left] != target)
+        return -1;
+    return left;
+}
+```
+
+### 寻找最右边的满足条件的值
+
+```java
+public int binarySearchRight(int[] nums, int target) {
+	// 搜索区间为 [left, right]
+    int left = 0
+    int right = nums.length - 1;
+    while (left <= right) {
+        int mid = left + (right - left) / 2;
+        if (nums[mid] < target) {
+			// 搜索区间变为 [mid+1, right]
+            left = mid + 1;
+        } else if (nums[mid] > target) {
+			// 搜索区间变为 [left, mid-1]
+            right = mid - 1;
+        } else if (nums[mid] == target) {
+            // 收缩左边界
+            left = mid + 1;
+        }
+    }
+    // 检查是否越界
+    if (right < 0 || nums[right] != target)
+        return -1;
+    return right;
+}
+```
+
+> 如果题目重点不是二分，也就是说二分只是众多步骤中的一步，大家也可以直接调用语言的 API，比如 Python 的 bisect 模块。
 
 更多题解可以访问我的LeetCode题解仓库：https://github.com/azl397985856/leetcode  。 目前已经30K star啦。
 
