--- a/problems/26.remove-duplicates-from-sorted-array.md
+++ b/problems/26.remove-duplicates-from-sorted-array.md
@@ -60,6 +60,8 @@ for (int i = 0; i < len; i++) {
 
 （图片来自： https://github.com/MisterBooo/LeetCodeAnimation)
 
+> 实际上这就是双指针中的快慢指针。在这里快指针是读指针， 慢指针是写指针。
+
 ## 关键点解析
 
 - 双指针
@@ -130,3 +132,14 @@ public:
     }
 };
 ```
+
+**复杂度分析**
+- 时间复杂度：$O(N)$
+- 空间复杂度：$O(1)$
+
+更多题解可以访问我的LeetCode题解仓库：https://github.com/azl397985856/leetcode  。 目前已经30K star啦。
+
+关注公众号力扣加加，努力用清晰直白的语言还原解题思路，并且有大量图解，手把手教你识别套路，高效刷题。
+
+
+![](https://tva1.sinaimg.cn/large/007S8ZIlly1gfcuzagjalj30p00dwabs.jpg)
