--- a/problems/144.binary-tree-preorder-traversal.md
+++ b/problems/144.binary-tree-preorder-traversal.md
@@ -35,6 +35,10 @@ Follow up: Recursive solution is trivial, could you do it iteratively?
 
 > 其他树的非递归遍历课没这么简单
 
+![](https://tva1.sinaimg.cn/large/007S8ZIlly1gg7v5hztd2j30zu0ntwiu.jpg)
+
+（迭代 VS 递归）
+
 ## 关键点解析
 
 - 二叉树的基本操作（遍历）
@@ -159,3 +163,7 @@ public:
     }
 };
 ```
+
+## 相关专题
+
+- [二叉树的遍历](https://github.com/azl397985856/leetcode/blob/master/thinkings/binary-tree-traversal.md)
