--- a/problems/94.binary-tree-inorder-traversal.md
+++ b/problems/94.binary-tree-inorder-traversal.md
@@ -66,43 +66,6 @@ Follow up: Recursive solution is trivial, could you do it iteratively?
 JavaScript Code：
 
 ```js
-/*
- * @lc app=leetcode id=94 lang=javascript
- *
- * [94] Binary Tree Inorder Traversal
- *
- * https://leetcode.com/problems/binary-tree-inorder-traversal/description/
- *
- * algorithms
- * Medium (55.22%)
- * Total Accepted:    422.4K
- * Total Submissions: 762.1K
- * Testcase Example:  '[1,null,2,3]'
- *
- * Given a binary tree, return the inorder traversal of its nodes' values.
- *
- * Example:
- *
- *
- * Input: [1,null,2,3]
- * ⁠  1
- * ⁠   \
- * ⁠    2
- * ⁠   /
- * ⁠  3
- *
- * Output: [1,3,2]
- *
- * Follow up: Recursive solution is trivial, could you do it iteratively?
- *
- */
-/**
- * Definition for a binary tree node.
- * function TreeNode(val) {
- *     this.val = val;
- *     this.left = this.right = null;
- * }
- */
 /**
  * @param {TreeNode} root
  * @return {number[]}
@@ -277,3 +240,7 @@ class Solution {
     }
 }
 ```
+
+## 相关专题
+
+- [二叉树的遍历](https://github.com/azl397985856/leetcode/blob/master/thinkings/binary-tree-traversal.md)
