--- a/problems/145.binary-tree-postorder-traversal.md
+++ b/problems/145.binary-tree-postorder-traversal.md
@@ -59,37 +59,6 @@ mid是一个具体的节点，left和right`递归求出即可`
 ## 代码
 
 ```js
-/*
- * @lc app=leetcode id=145 lang=javascript
- *
- * [145] Binary Tree Postorder Traversal
- *
- * https://leetcode.com/problems/binary-tree-postorder-traversal/description/
- *
- * algorithms
- * Hard (47.06%)
- * Total Accepted:    242.6K
- * Total Submissions: 512.8K
- * Testcase Example:  '[1,null,2,3]'
- *
- * Given a binary tree, return the postorder traversal of its nodes' values.
- *
- * Example:
- *
- *
- * Input: [1,null,2,3]
- * ⁠  1
- * ⁠   \
- * ⁠    2
- * ⁠   /
- * ⁠  3
- *
- * Output: [3,2,1]
- *
- *
- * Follow up: Recursive solution is trivial, could you do it iteratively?
- *
- */
 /**
  * Definition for a binary tree node.
  * function TreeNode(val) {
@@ -138,3 +107,9 @@ var postorderTraversal = function(root) {
 };
 
 ```
+
+## 相关专题
+
+- [二叉树的遍历](https://github.com/azl397985856/leetcode/blob/master/thinkings/binary-tree-traversal.md)
+
+
