--- a/problems/42.trapping-rain-water.md
+++ b/problems/42.trapping-rain-water.md
@@ -161,7 +161,7 @@ int trap(vector<int>& heights)
 具体算法：
 
 1. 维护两个指针 left 和 right，分别指向头尾。
-2. 初始化左侧和右侧最低的高度都为 0。
+2. 初始化左侧和右侧最高的高度都为 0。
 3. 比较 height[left] 和 height[right]
 
    - 3.1 如果 height[left] < height[right]
