--- a/problems/108.convert-sorted-array-to-binary-search-tree.md
+++ b/problems/108.convert-sorted-array-to-binary-search-tree.md
@@ -79,7 +79,7 @@ var sortedArrayToBST = function (nums) {
 **复杂度分析**
 
 - 时间复杂度：$O(N)$
-- 空间复杂度：每次递归都 copy 了 N 的 空间，因此时间复杂度为 $O(N ^ 2)$
+- 空间复杂度：每次递归都 copy 了 N 的 空间，因此空间复杂度为 $O(N ^ 2)$
 
 然而，实际上没必要开辟新的空间：
 
