--- a/problems/32.longest-valid-parentheses.md
+++ b/problems/32.longest-valid-parentheses.md
@@ -43,7 +43,7 @@ s = '(())())'
 根据以上规则, 我们求解dp数组的结果为: [0, 0, 0, 2, 4, 0, 6, 0], 其中最长有效括号对的长度为6. 以下为图解:
 ![32.longest-valid-parentheses](../assets/problems/32.longest-valid-parentheses.png)
 
-## 关键点解析
+## 关键点
 
 1. 第3点特征, 需要检查的字符是s[i-1]和s[i-2-dp[i-1]], 根据定义可知: i-1 >= dp[i-1], 但是i-2不一定大于dp[i-1], 因此, 需要检查越界;
 3. 第4点特征最容易遗漏, 还有就是不需要检查越界, 因为根据定义可知: i >= dp[i], 所以dp[i-dp[i]]的边界情况是dp[0];
@@ -59,7 +59,8 @@ s = '(())())'
 * 语言支持: Python, javascript
 
 Python Code:
-```
+
+```py
 class Solution:
     def longestValidParentheses(self, s: str) -> int:
         mlen = 0
