--- a/problems/92.reverse-linked-list-ii.md
+++ b/problems/92.reverse-linked-list-ii.md
@@ -247,51 +247,36 @@ public:
 Python Code:
 
 ```Python
-# Definition for singly-linked list.
-# class ListNode:
-#     def __init__(self, x):
-#         self.val = x
-#         self.next = None
 
 class Solution:
     def reverseBetween(self, head: ListNode, m: int, n: int) -> ListNode:
-        """采用先翻转中间部分，之后与不变的前后部分拼接的思路"""
-        # 处理特殊情况
-        if m == n:
+        if not head.next or n == 1:
             return head
-
-        # 例行性的先放一个开始节点，方便操作
-        first = ListNode(0)
-        first.next = head
-
-        # 通过以下两个节点记录拼接点
-        before_m = first  # 原链表m前的部分
-        after_n = None  # 原链表n后的部分
-
-        # 通过以下两个节点记录翻转后的链表
-        between_mn_head = None
-        between_mn_end = None
-
-        index = 0
-        cur_node = first
-        while index < n:
-            index += 1
-            cur_node = cur_node.next
-            if index == m - 1:
-                before_m = cur_node
-            elif index == m:
-                between_mn_end = ListNode(cur_node.val)
-                between_mn_head = between_mn_end
-            elif index > m:
-                temp = between_mn_head
-                between_mn_head = ListNode(cur_node.val)
-                between_mn_head.next = temp
-                if index == n:
-                    after_n = cur_node.next
-
-        # 进行拼接
-        between_mn_end.next = after_n
-        before_m.next = between_mn_head
-
-        return first.next
+        dummy = ListNode()
+        dummy.next = head
+        pre = None
+        cur = head
+        i = 0
+        p1 = p2 = p3 = p4 = None
+        while cur:
+            i += 1
+            next = cur.next
+            if m < i <= n:
+                cur.next = pre
+            if i == m - 1:
+                p1 = cur
+            if i == m:
+                p2 = cur
+            if i == n:
+                p3 = cur
+            if i == n + 1:
+                p4 = cur
+            pre = cur
+            cur = next
+        if not p1:
+            dummy.next = p3
+        else:
+            p1.next = p3
+        p2.next = p4
+        return dummy.next
 ```
