--- a/problems/208.implement-trie-prefix-tree.md
+++ b/problems/208.implement-trie-prefix-tree.md
@@ -27,7 +27,7 @@ All inputs are guaranteed to be non-empty strings.
 ## 前置知识
 
 - 前缀树
-  
+
 ## 思路
 
 这是一道很直接的题目，上来就让你实现`前缀树（字典树）`。这算是基础数据结构中的
@@ -129,7 +129,7 @@ function computeIndex(c) {
 /**
  * Initialize your data structure here.
  */
-var Trie = function() {
+var Trie = function () {
   this.root = new TrieNode(null);
 };
 
@@ -138,7 +138,7 @@ var Trie = function() {
  * @param {string} word
  * @return {void}
  */
-Trie.prototype.insert = function(word) {
+Trie.prototype.insert = function (word) {
   let ws = this.root;
   for (let i = 0; i < word.length; i++) {
     const c = word[i];
@@ -156,7 +156,7 @@ Trie.prototype.insert = function(word) {
  * @param {string} word
  * @return {boolean}
  */
-Trie.prototype.search = function(word) {
+Trie.prototype.search = function (word) {
   let ws = this.root;
   for (let i = 0; i < word.length; i++) {
     const c = word[i];
@@ -172,7 +172,7 @@ Trie.prototype.search = function(word) {
  * @param {string} prefix
  * @return {boolean}
  */
-Trie.prototype.startsWith = function(prefix) {
+Trie.prototype.startsWith = function (prefix) {
   let ws = this.root;
   for (let i = 0; i < prefix.length; i++) {
     const c = prefix[i];
@@ -198,3 +198,4 @@ Trie.prototype.startsWith = function(prefix) {
 - [0212.word-search-ii](./212.word-search-ii.md)
 - [0472.concatenated-words](./problems/472.concatenated-words.md)
 - [0820.short-encoding-of-words](https://github.com/azl397985856/leetcode/blob/master/problems/820.short-encoding-of-words.md)
+- [1032.stream-of-characters](https://github.com/azl397985856/leetcode/blob/master/problems/1032.stream-of-characters.md)
