--- a/problems/212.word-search-ii.md
+++ b/problems/212.word-search-ii.md
@@ -35,7 +35,7 @@ words = ["oath","pea","eat","rain"] and board =
 
 - 前缀树
 - DFS
-  
+
 ## 思路
 
 我们需要对矩阵中每一项都进行深度优先遍历（DFS）。 递归的终点是
@@ -143,5 +143,6 @@ class Solution:
 
 - [0208.implement-trie-prefix-tree](./208.implement-trie-prefix-tree.md)
 - [0211.add-and-search-word-data-structure-design](./211.add-and-search-word-data-structure-design.md)
-- [0472.concatenated-words](./problems/472.concatenated-words.md)
+- [0472.concatenated-words](./472.concatenated-words.md)
 - [0820.short-encoding-of-words](https://github.com/azl397985856/leetcode/blob/master/problems/820.short-encoding-of-words.md)
+- [1032.stream-of-characters](https://github.com/azl397985856/leetcode/blob/master/problems/1032.stream-of-characters.md)
