--- a/problems/312.burst-balloons.md
+++ b/problems/312.burst-balloons.md
@@ -94,7 +94,7 @@ var maxCoins = function (nums) {
 
 - 而对于 dp[i][j]，i 和 j 之间会有很多气球，到底该戳哪个先呢？我们直接设为 k，枚举选择最优的 k 就可以了。
 
-- 所以，最终的状态转移方程为：dp[i][j] = max(dp[i][j], dp[i][k] + dp[k][j] + nums[k] + nums[i] + nums[j])
+- 所以，最终的状态转移方程为：dp[i][j] = max(dp[i][j], dp[i][k] + dp[k][j] + nums[k] * nums[i] * nums[j])
 
 3. 初始值和边界
 
