--- a/problems/312.burst-balloons.md
+++ b/problems/312.burst-balloons.md
@@ -113,7 +113,7 @@ var maxCoins = function (nums) {
 #### 代码
 
 
-代码支持： JS
+代码支持： JS, Python
 
 JS Code:
 
@@ -137,6 +137,22 @@ var maxCoins = function (nums) {
   }
   return dp[0][n + 1];
 };
+```
+
+Python Code:
+
+```py
+class Solution:
+    def maxCoins(self, nums: List[int]) -> int:
+        n = len(nums)
+        points = [1] + nums + [1]
+        dp = [[0] * (n + 2) for _ in range(n + 2)]
+
+        for i in range(n, -1, -1):
+            for j in range(i + 1, n + 2):
+                for k in range(i + 1, j):
+                    dp[i][j] = max(dp[i][j], dp[i][k] + dp[k][j] + points[i] * points[k] * points[j])
+        return dp[0][-1]
 ```
 
 **复杂度分析**
