--- a/problems/312.burst-balloons.md
+++ b/problems/312.burst-balloons.md
@@ -107,6 +107,7 @@ var maxCoins = function (nums) {
 - 当 i == j 时，i 和 j 之间是没有气球的，所以枚举的状态很明显是 dp table 的左上部分，也就是 j 大于 i，如下图所示，只给出一部分方便思考。
 
 ![](https://tva1.sinaimg.cn/large/007S8ZIlly1gfckn1vngxj30lk0aodgf.jpg)
+（图有错误。图中 dp[k][i] 应该是 dp[i][k]，dp[j][k] 应该是 dp[k][j]）
 
 > 从上图可以看出，我们需要从下到上，从左到右进行遍历。
 
