--- a/problems/167.two-sum-ii-input-array-is-sorted.md
+++ b/problems/167.two-sum-ii-input-array-is-sorted.md
@@ -44,7 +44,7 @@ Explanation: The sum of 2 and 7 is 9. Therefore index1 = 1, index2 = 2.
 
 ## 代码
 
-* 语言支持：JS，Python
+* 语言支持：JS，C++，Java，Python
 
 Javascript Code:
 
@@ -66,6 +66,64 @@ var twoSum = function(numbers, target) {
     }
     return [];
 };
+```
+
+C++ Code:
+
+```c++
+class Solution {
+public:
+    vector<int> twoSum(vector<int>& numbers, int target) {
+        int n = numbers.size();
+        int left = 0;
+        int right = n-1;
+        while(left <= right)
+        {
+            if(numbers[left] + numbers[right] == target)
+            {
+                return {left + 1, right + 1};
+            }
+            else if (numbers[left] + numbers[right] > target)
+            {
+                right--;
+            }
+            else
+            {
+                left++;
+            }
+        }
+        return {-1, -1};
+    }
+};
+```
+
+Java Code:
+
+```java
+class Solution {
+    public int[] twoSum(int[] numbers, int target) {
+        int n = numbers.length;
+        int left = 0;
+        int right = n-1;
+        while(left <= right)
+        {
+            if(numbers[left] + numbers[right] == target)
+            {
+                return new int[]{left + 1, right + 1};
+            }
+            else if (numbers[left] + numbers[right] > target)
+            {
+                right--;
+            }
+            else
+            {
+                left++;
+            }
+        }
+        
+        return new int[]{-1, -1};
+    }
+}
 ```
 
 Python Code:
