--- a/problems/130.surrounded-regions.md
+++ b/problems/130.surrounded-regions.md
@@ -160,4 +160,16 @@ class Solution:
 
 > 解题模板是一样的
 
+**复杂度分析**
+- 时间复杂度：$O(row * col)$
+- 空间复杂度：$O(row * col)$
+
+更多题解可以访问我的LeetCode题解仓库：https://github.com/azl397985856/leetcode  。 目前已经35K star啦。
+
+关注公众号力扣加加，努力用清晰直白的语言还原解题思路，并且有大量图解，手把手教你识别套路，高效刷题。
+
+
+![](https://tva1.sinaimg.cn/large/007S8ZIlly1gfcuzagjalj30p00dwabs.jpg)
+
+
 
