--- a/problems/53.maximum-sum-subarray-cn.md
+++ b/problems/53.maximum-sum-subarray-cn.md
@@ -14,7 +14,9 @@ Follow up:
 
 If you have figured out the O(n) solution, try coding another solution using the divide and conquer approach, which is more subtle.
 ```
-
+## 前置知识
+- 滑动窗口
+- 动态规划
 ## 公司
 
 - 阿里、百度、字节、腾讯
