feat(ml): $122.best-time-to-buy-and-sell-stock-ii.md (#414)

--- a/problems/122.best-time-to-buy-and-sell-stock-ii.md
+++ b/problems/122.best-time-to-buy-and-sell-stock-ii.md
@@ -53,7 +53,7 @@ Explanation: In this case, no transaction is done, i.e. max profit = 0.
 
 ## 代码
 
-语言支持：JS，Python 
+语言支持：JS，C++，Java，Python 
 
 JS Code:
 
@@ -74,7 +74,42 @@ var maxProfit = function(prices) {
     return profit;
 };
 ```
+C++ Code:
 
+```c++
+class Solution {
+public:
+    int maxProfit(vector<int>& prices) {
+        int res = 0;
+        for(int i=1;i<prices.size();i++)
+        {
+            if(prices[i] > prices[i-1])
+            {
+                res += prices[i] - prices[i-1];
+            }
+        }
+        return res;
+    }
+};
+```
+
+Java Code:
+
+```java
+class Solution {
+    public int maxProfit(int[] prices) {
+        int res = 0;
+        for(int i=1;i<prices.length;i++)
+        {
+            if(prices[i] > prices[i-1])
+            {
+                res += prices[i] - prices[i-1];
+            }
+        }
+        return res;
+    }
+}
+```
 
 
 Python Code:
