feat(ml): $121.best-time-to-buy-and-sell-stock.md (#413)
添加Java语言支持，微调语言顺序

--- a/problems/121.best-time-to-buy-and-sell-stock.md
+++ b/problems/121.best-time-to-buy-and-sell-stock.md
@@ -44,7 +44,7 @@ Explanation: In this case, no transaction is done, i.e. max profit = 0.
 
 ## 代码
 
-语言支持：JS，Python，C++
+语言支持：JS，C++，Java，Python
 
 JS Code:
 
@@ -69,26 +69,6 @@ var maxProfit = function(prices) {
 };
 ```
 
-
-
-Python Code:
-
-```python
-class Solution:
-    def maxProfit(self, prices: 'List[int]') -> int:
-        if not prices: return 0
-
-        min_price = float('inf')
-        max_profit = 0
-
-        for price in prices:
-            if price < min_price:
-                min_price = price
-            elif max_profit < price - min_price:
-                max_profit = price - min_price
-        return max_profit
-```
-
 C++ Code:
 ```c++
 /**
@@ -111,8 +91,38 @@ public:
     }
 };
 ```
+Java Code:
+```java
+class Solution {
+    public int maxProfit(int[] prices) {
+        int minprice = Integer.MAX_VALUE;
+        int maxprofit = 0;
+        for (int price: prices) {
+            maxprofit = Math.max(maxprofit, price - minprice);
+             minprice = Math.min(price, minprice);
+        }
+        return maxprofit;
+    }
+}
+```
 
+Python Code:
 
+```python
+class Solution:
+    def maxProfit(self, prices: 'List[int]') -> int:
+        if not prices: return 0
+
+        min_price = float('inf')
+        max_profit = 0
+
+        for price in prices:
+            if price < min_price:
+                min_price = price
+            elif max_profit < price - min_price:
+                max_profit = price - min_price
+        return max_profit
+```
 
 ## 相关题目
 
