feat(ml): $283.move-zeroes.md (#411)
添加Java语言支持

--- a/problems/283.move-zeroes.md
+++ b/problems/283.move-zeroes.md
@@ -37,7 +37,7 @@ Minimize the total number of operations.
 
 ## 代码
 
-* 语言支持：JS, C++, Python
+* 语言支持：JS, C++, Java，Python
 
 JavaScript Code:
 
@@ -85,6 +85,28 @@ public:
         }
     }
 };
+```
+
+Java Code:
+
+```java
+class Solution {
+    public void moveZeroes(int[] nums) {
+        // 双指针
+        int i = 0;
+        for(int j=0; j<nums.length; j++)
+        {
+            // 不为0，前移
+            if(nums[j] != 0)
+            {
+                int temp = nums[i];
+                nums[i] = nums[j];
+                nums[j] = temp;
+                i++;
+            }
+        }
+    }
+}
 ```
 
 Python Code:
