--- a/problems/101.symmetric-tree.md
+++ b/problems/101.symmetric-tree.md
@@ -35,8 +35,8 @@ https://leetcode-cn.com/problems/symmetric-tree/
 ```
 ## 前置知识
 
-- 二叉树
-- 递归
+- [二叉树](https://github.com/azl397985856/leetcode/blob/master/thinkings/basic-data-structure.md)
+- [递归](https://github.com/azl397985856/leetcode/blob/master/thinkings/dynamic-programming.md)
 
 ## 思路
 
@@ -103,7 +103,7 @@ class Solution:
         return dfs(root.left, root.right)
 ```
 
-**_复杂度分析_**
+**复杂度分析**
 
 - 时间复杂度：$O(N)$，其中 N 为节点数。
 - 空间复杂度：递归的深度最高为节点数，因此空间复杂度是 $O(N)$，其中 N 为节点数。
