--- a/problems/53.maximum-sum-subarray-cn.md
+++ b/problems/53.maximum-sum-subarray-cn.md
@@ -15,11 +15,14 @@ Follow up:
 If you have figured out the O(n) solution, try coding another solution using the divide and conquer approach, which is more subtle.
 ```
 ## 前置知识
-- 滑动窗口
-- 动态规划
+- [滑动窗口](https://github.com/azl397985856/leetcode/blob/master/thinkings/slide-window.md)
+- [动态规划](https://github.com/azl397985856/leetcode/blob/master/thinkings/dynamic-programming.md)
 ## 公司
 
-- 阿里、百度、字节、腾讯
+- 阿里
+- 百度
+- 字节
+- 腾讯
 
 ## 思路
 
