--- a/problems/1.two-sum.md
+++ b/problems/1.two-sum.md
@@ -26,6 +26,18 @@ https://leetcode-cn.com/problems/two-sum
 - 字节
 - 百度
 - 腾讯
+- adobe
+- airbnb
+- amazon
+- apple
+- bloomberg
+- dropbox
+- facebook
+- linkedin
+- microsoft
+- uber
+- yahoo
+- yelp
 
 ## 思路
 
