--- a/problems/20.valid-parentheses.md
+++ b/problems/20.valid-parentheses.md
@@ -39,6 +39,17 @@ Output: true
 
 - [栈](https://github.com/azl397985856/leetcode/blob/master/thinkings/basic-data-structure.md)
 
+## 公司
+
+- airbnb
+- amazon
+- bloomberg
+- facebook
+- google
+- microsoft
+- twitter
+- zenefits
+
 ## 栈
 
 ### 思路
