--- a/problems/21.merge-two-sorted-lists.md
+++ b/problems/21.merge-two-sorted-lists.md
@@ -24,6 +24,10 @@ https://leetcode-cn.com/problems/merge-two-sorted-lists
 - 阿里
 - 字节
 - 腾讯
+- amazon
+- apple
+- linkedin
+- microsoft
 
 ## 思路
 
@@ -68,9 +72,9 @@ const mergeTwoLists = function (l1, l2) {
 };
 ```
 
-**_复杂度分析_**
+**复杂度分析**
 
 M、N 是两条链表 l1、l2 的长度
 
-- 时间复杂度：O(M+N)
-- 空间复杂度：O(M+N)
+- 时间复杂度：$O(M+N)$
+- 空间复杂度：$O(M+N)$
