--- a/problems/26.remove-duplicates-from-sorted-array.md
+++ b/problems/26.remove-duplicates-from-sorted-array.md
@@ -44,6 +44,12 @@ for (int i = 0; i < len; i++) {
 - [数组](https://github.com/azl397985856/leetcode/blob/master/thinkings/basic-data-structure.md)
 - 双指针
 
+## 公司
+
+- bloomberg
+- facebook
+- microsoft
+
 ## 思路
 
 使用快慢指针来记录遍历的坐标。
