--- a/problems/101.symmetric-tree.md
+++ b/problems/101.symmetric-tree.md
@@ -33,6 +33,12 @@ https://leetcode-cn.com/problems/symmetric-tree/
 
 
 ```
+
+## 公司
+
+- bloomberg
+- linkedin
+- microsoft
 ## 前置知识
 
 - [二叉树](https://github.com/azl397985856/leetcode/blob/master/thinkings/basic-data-structure.md)
