--- a/problems/108.convert-sorted-array-to-binary-search-tree.md
+++ b/problems/108.convert-sorted-array-to-binary-search-tree.md
@@ -25,9 +25,13 @@ https://leetcode-cn.com/problems/convert-sorted-array-to-binary-search-tree/
 
 ## 前置知识
 
-- 二叉搜索树
-- 平衡二叉树
-- 递归
+- [二叉搜索树](https://github.com/azl397985856/leetcode/blob/master/thinkings/basic-data-structure.md)
+- [平衡二叉树](https://github.com/azl397985856/leetcode/blob/master/thinkings/basic-data-structure.md)
+- [递归](https://github.com/azl397985856/leetcode/blob/master/thinkings/dynamic-programming.md)
+
+## 公司
+
+- airbnb
 
 ## 思路
 
