--- a/problems/121.best-time-to-buy-and-sell-stock.md
+++ b/problems/121.best-time-to-buy-and-sell-stock.md
@@ -26,7 +26,15 @@ Explanation: In this case, no transaction is done, i.e. max profit = 0.
 
 ## 前置知识
 
-- 数组
+- [数组](https://github.com/azl397985856/leetcode/blob/master/thinkings/basic-data-structure.md)
+
+## 公司
+
+- amazon
+- bloomberg
+- facebook
+- microsoft
+- uber
 
 ## 思路
 
@@ -124,7 +132,20 @@ class Solution:
         return max_profit
 ```
 
+**复杂度分析**
+- 时间复杂度：$O(N)$
+- 空间复杂度：$O(1)$
+
+
 ## 相关题目
 
 - [122.best-time-to-buy-and-sell-stock-ii](./122.best-time-to-buy-and-sell-stock-ii.md)
 - [309.best-time-to-buy-and-sell-stock-with-cooldown](./309.best-time-to-buy-and-sell-stock-with-cooldown.md)
+
+
+更多题解可以访问我的LeetCode题解仓库：https://github.com/azl397985856/leetcode  。 目前已经35K star啦。
+
+关注公众号力扣加加，努力用清晰直白的语言还原解题思路，并且有大量图解，手把手教你识别套路，高效刷题。
+
+
+![](https://tva1.sinaimg.cn/large/007S8ZIlly1gfcuzagjalj30p00dwabs.jpg)
