--- a/problems/122.best-time-to-buy-and-sell-stock-ii.md
+++ b/problems/122.best-time-to-buy-and-sell-stock-ii.md
@@ -33,7 +33,11 @@ Explanation: In this case, no transaction is done, i.e. max profit = 0.
 
 ## 前置知识
 
-- 数组
+- [数组](https://github.com/azl397985856/leetcode/blob/master/thinkings/basic-data-structure.md)
+
+## 公司
+
+- bloomberg
 
 ## 思路
 
@@ -53,7 +57,7 @@ Explanation: In this case, no transaction is done, i.e. max profit = 0.
 
 ## 代码
 
-语言支持：JS，C++，Java，Python 
+语言支持：JS，C++，Java 
 
 JS Code:
 
@@ -112,23 +116,19 @@ class Solution {
 ```
 
 
-Python Code:
-
-```python
-class Solution:
-    def maxProfit(self, prices: 'List[int]') -> int:
-        gains = [prices[i] - prices[i-1] for i in range(1, len(prices))
-                 if prices[i] - prices[i-1] > 0]
-        return sum(gains)
-#评论区里都讲这是一道开玩笑的送分题.
-```
-
-
-
-
+**复杂度分析**
+- 时间复杂度：$O(N)$
+- 空间复杂度：$O(1)$
 
 ## 相关题目
 
 - [121.best-time-to-buy-and-sell-stock](./121.best-time-to-buy-and-sell-stock.md)
 - [309.best-time-to-buy-and-sell-stock-with-cooldown](./309.best-time-to-buy-and-sell-stock-with-cooldown.md)
+
+更多题解可以访问我的LeetCode题解仓库：https://github.com/azl397985856/leetcode  。 目前已经35K star啦。
+
+关注公众号力扣加加，努力用清晰直白的语言还原解题思路，并且有大量图解，手把手教你识别套路，高效刷题。
+
+
+![](https://tva1.sinaimg.cn/large/007S8ZIlly1gfcuzagjalj30p00dwabs.jpg)
 
