--- a/problems/155.min-stack.md
+++ b/problems/155.min-stack.md
@@ -24,7 +24,14 @@ minStack.getMin();   --> Returns -2.
 ```
 
 ## 前置知识
-- 差值法
+- [栈](https://github.com/azl397985856/leetcode/blob/master/thinkings/basic-data-structure.md)
+## 公司
+- amazon
+- bloomberg
+- google
+- snapchat
+- uber
+- zenefits
 ## 思路
 
 符合直觉的方法是，每次对栈进行修改操作（push和pop）的时候更新最小值。 然后getMin只需要返回我们计算的最小值即可，
@@ -517,4 +524,11 @@ class MinStack:
 
 **复杂度分析**
 - 时间复杂度：O(1)
-- 空间复杂度：O(N)
+- 空间复杂度：O(1)
+
+更多题解可以访问我的LeetCode题解仓库：https://github.com/azl397985856/leetcode  。 目前已经35K star啦。
+
+关注公众号力扣加加，努力用清晰直白的语言还原解题思路，并且有大量图解，手把手教你识别套路，高效刷题。
+
+
+![](https://tva1.sinaimg.cn/large/007S8ZIlly1gfcuzagjalj30p00dwabs.jpg)
